--- a/.github/workflows/ai-act-score.yml
+++ b/.github/workflows/ai-act-score.yml
@@ -25,7 +25,7 @@ jobs:
         uses: actions/checkout@v3
         with:
           repository: Lab700xOrg/ai-act-score-action
-          token: ${{ secrets.GITHUB_TOKEN }}
+          token: ${{ secrets.ACTION_REPO_PAT }}
           path: action-src
 
       - name: Run local scan
